--- a/learn/CMakeLists.txt
+++ b/learn/CMakeLists.txt
@@ -3,6 +3,7 @@ project(learn)
 
 find_package(OpenGL REQUIRED)
 
+# sure correct source, binary directories
 if (CMAKE_SOURCE_DIR MATCHES " ")
   message("your source directory contains space")
 endif()
@@ -10,17 +11,47 @@ if (CMAKE_BINARY_DIR MATCHES " ")
   message("your source directory contains space")
 endif()
 
+# inlcude directories contain library
 add_subdirectory(external)
 include_directories(
-  external/AntTweakBar-1.6
+  external/AntTweakBar-1.6/include/
+  external/assimp-3.0.1270/include/
+  external/bullet-2.81-rev2613/src/
+  external/glew-1.13.0/include/
+  external/glfw-3.1.2/include/
+  external/glm-0.9.7.1/
+  .
 )
 
+set(ALL_LIBS
+  ${OPENGL_LIBRARY}
+  glfw
+  GLEW_1130
+)
+
+add_definitions(
+  -DTW_STATIC
+  -DTW_NO_LIB_PRAGMA
+  -DTW_NO_DIRECT3D
+  -DGLEW_STATIC
+  -D_CRT_SECURE_NO_WARNINGS
+)
+
+# file 1
+add_executable(file01 file01.cpp)
+target_link_libraries(file01 ${ALL_LIBS})
 
 
 
+# ===============================
 
+SOURCE_GROUP(common REGULAR_EXPRESSION ".*/common.*")
+SOURCE_GROUP(shaders REGULAR_EXPRESSION ".*/shader$")
 
-
-
+add_custom_command(
+  TARGET file01 POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy
+  ${CMAKE_CURRENT_BINARY_DIR}/${}
+)
 
 
